--- a/miniproject/css/style_content.css
+++ b/miniproject/css/style_content.css
@@ -1,299 +1,303 @@
 * {
-	box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 body {
-	margin: 0;
-	padding: 0;
-	background-image: url("../img/Logo_1.svg");
-	background-attachment: fixed;
-	background-repeat: no-repeat;
-	background-position: center center;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  margin: 0;
+  padding: 0;
+  background-image: url("../img/Logo_1.svg");
+  background-attachment: fixed;
+  background-repeat: no-repeat;
+  background-position: center center;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 .logo {
-	width: 50px;
-	position: fixed;
-	top: 10px;
-	left: 50px;
-	z-index: 100;
+  width: 50px;
+  position: fixed;
+  top: 10px;
+  left: 50px;
+  z-index: 100;
 }
 
 nav {
-	width: 100%;
-	background-color: rgba(0, 128, 128, 0.9);
-	height: 70px;
-	overflow: auto;
+  width: 100%;
+  background-color: rgba(0, 128, 128, 0.9);
+  height: 70px;
+  overflow: auto;
 }
 
 nav ul.ulAtas {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	position: absolute;
-	padding-left: 750px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  padding-left: 750px;
 }
 
 nav ul.ulBawah {
-	list-style: none;
-	padding: 0;
-	margin: 0;
-	position: absolute;
-	border-radius: 10px;
+  list-style: none;
+  padding: 0;
+  margin: 0;
+  position: absolute;
+  border-radius: 10px;
 }
 
 nav ul li {
-	float: left;
-	padding: 10px;
+  float: left;
+  padding: 10px;
 }
 
 nav ul li a {
-	width: 100px;
-	color: #fff;
-	display: block;
-	text-decoration: none;
-	font-size: 20px;
-	text-align: center;
-	padding: 10px;
-	border-radius: 10px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	font-weight: bold;
-	letter-spacing: 0.5px;
+  width: 100px;
+  color: #fff;
+  display: block;
+  text-decoration: none;
+  font-size: 20px;
+  text-align: center;
+  padding: 10px;
+  border-radius: 10px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-weight: bold;
+  letter-spacing: 0.5px;
 }
 
 nav a:hover {
-	background-color: #131013;
-	opacity: 0.5;
-	font-size: 23px;
+  background-color: #131013;
+  opacity: 0.5;
+  font-size: 23px;
 }
 
 nav ul li ul {
-	background-color: rgb(0, 128, 128);
+  background-color: rgb(0, 128, 128);
 }
 
 nav ul li ul li {
-	float: none;
+  float: none;
 }
 
 nav ul li ul {
-	display: none;
+  display: none;
 }
 
 nav ul li:hover ul {
-	display: block;
+  display: block;
 }
 
 .search-form {
-	margin-top: 16px;
-	float: right;
-	margin-right: 100px;
+  margin-top: 16px;
+  float: right;
+  margin-right: 100px;
 }
 
 input[type="text"] {
-	padding: 7px;
-	border: none;
-	font-size: 16px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  padding: 7px;
+  border: none;
+  font-size: 16px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
 
 button {
-	float: right;
-	background-color: #53bd84;
-	color: #fff;
-	border-radius: 0 5px 5px 0;
-	cursor: pointer;
-	position: relative;
-	padding: 5px;
-	margin-left: 5px;
-	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-		Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-	font-size: 16px;
+  float: right;
+  background-color: #53bd84;
+  color: #fff;
+  border-radius: 0 5px 5px 0;
+  cursor: pointer;
+  position: relative;
+  padding: 5px;
+  margin-left: 5px;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 16px;
 }
 
 ul.breadcrumb {
-	padding: 10px 16px;
-	list-style: none;
-	z-index: 2;
+  padding: 10px 16px;
+  list-style: none;
+  z-index: 2;
 }
 
 ul.breadcrumb li {
-	display: inline;
-	font-size: 18px;
+  display: inline;
+  font-size: 18px;
 }
 
 ul.breadcrumb li + li:before {
-	padding: 8px;
-	color: black;
-	content: "/\00a0";
+  padding: 8px;
+  color: black;
+  content: "/\00a0";
 }
 
 ul.breadcrumb li a {
-	color: #02add8;
-	text-decoration: none;
+  color: #02add8;
+  text-decoration: none;
 }
 
 ul.breadcrumb li a:hover {
-	color: #01227e;
-	text-decoration: underline;
+  color: #01227e;
+  text-decoration: underline;
 }
 
 main {
-	margin-left: 10%;
-	margin-right: 10%;
+  margin-left: 10%;
+  margin-right: 10%;
 }
 
 main > div {
-	display: inline-block;
-	margin-bottom: 10px;
-	padding: 10px;
-	border-radius: 10px;
-	height: 300px;
+  display: inline-block;
+  margin-bottom: 10px;
+  padding: 10px;
+  border-radius: 10px;
+  height: 300px;
 }
 
 main h1 {
-	letter-spacing: 5px;
-	line-height: 1;
-	text-decoration: underline;
+  letter-spacing: 5px;
+  line-height: 1;
+  text-decoration: underline;
 }
 
 main > h1 {
-	text-align: center;
+  text-align: center;
 }
 
 .title {
-	text-align: center;
-	margin-bottom: 20px;
+  text-align: center;
+  margin-bottom: 20px;
 }
 
 .deskripsi {
-	margin-bottom: 20px;
-	text-align: justify;
+  margin-bottom: 20px;
+  text-align: justify;
 }
 
 .beginner,
 .intermediate,
 .advanced {
-	float: left;
-	width: 33.33%;
+  float: left;
+  width: 33.33%;
 }
 
 .beginner,
 .intermediate,
 .advanced {
-	text-align: center;
+  text-align: center;
 }
 
 .beginner,
 .intermediate,
 .advanced p {
-	text-align: center;
+  text-align: center;
 }
 
 section > h2 {
-	text-decoration: underline;
-	margin-bottom: 10px;
+  text-decoration: underline;
+  margin-bottom: 10px;
 }
 
 section h3 {
-	margin-top: 10px;
+  margin-top: 10px;
 }
 
 main > p {
-	text-align: justify;
-	margin-bottom: 10px;
+  text-align: justify;
+  margin-bottom: 10px;
 }
 
 .intermediate {
-	border-left: 5px solid teal;
-	border-right: 5px solid teal;
+  border-left: 5px solid teal;
+  border-right: 5px solid teal;
 }
 
 table {
-	margin-left: auto;
-	margin-right: auto;
-	background-color: rgba(0, 128, 128, 0.7);
-	border-radius: 25px;
+  margin-left: auto;
+  margin-right: auto;
+  background-color: rgba(0, 128, 128, 0.7);
+  border-radius: 25px;
 }
 
 table th,
 td {
-	color: white;
-	padding: 10px;
-	font-size: 20px;
+  color: white;
+  padding: 10px;
+  font-size: 20px;
 }
 
 table th {
-	text-decoration: underline;
+  text-decoration: underline;
 }
 
 table td:first-child {
-	text-align: right;
-	font-weight: bold;
+  text-align: right;
+  font-weight: bold;
 }
 
 table td:nth-child(2) {
-	text-align: left;
+  text-align: left;
 }
 
 li {
-	list-style: none;
+  list-style: none;
 }
 
 ul {
-	margin: 0;
-	padding: 0;
-	list-style: none;
+  margin: 0;
+  padding: 0;
+  list-style: none;
 }
 
 .menu {
-	float: left;
+  float: left;
 }
 
 .menu > .dropdown {
-	float: left;
-	margin-right: 6px;
-	position: relative;
+  float: left;
+  margin-right: 6px;
+  position: relative;
 }
 
 .menu > .dropdown:hover ul {
-	display: block;
+  display: block;
 }
 
 .dd {
-	display: none;
-	position: absolute;
-	width: 100%;
+  display: none;
+  position: absolute;
+  width: 100%;
 }
 
 .dd li {
-	background-color: #535b68;
+  background-color: #535b68;
 }
 
 footer {
-	position: absolute;
-	bottom: 0;
-	background-color: teal;
-	width: 100%;
+  /* position: absolute; */
+  float: left;
+  margin-top: 20px;
+  bottom: 0;
+  background-color: teal;
+  width: 100%;
 }
 
 footer p {
-	text-align: center;
-	color: white;
+  padding: 20px;
+  margin: 0px;
+  text-align: center;
+  color: white;
 }
 
 footer img {
-	position: relative;
-	width: 50px;
-	display: block;
-	margin-left: auto;
-	margin-right: auto;
+  position: relative;
+  width: 50px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 #daftar li {
-	list-style-type: circle;
-	margin-left: 20px;
+  list-style-type: circle;
+  margin-left: 20px;
 }
